[package]
name = "p2p_energy_auction"
version = "0.1.0"
edition = "2021"
default-run = "p2p_energy_auction" 

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "p2p_energy_auction"
path = "src/main.rs"

[[bin]]
name = "evil_node"
path = "src/bin/evil_node.rs" 

[[bin]]
name = "relay"
path = "src/bin/relay.rs" 

[[bin]]
name = "mobile_bridge"
path = "src/bin/mobile_bridge.rs"

[dependencies]
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"
futures = "0.3.32"

# =========================================================
# 💻 1. NATIVE DEPENDENCIES (Laptop, Desktop, Google Cloud)
# =========================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "dns", "quic", "noise", "yamux", "gossipsub", "kad", "relay", "identify", "autonat", "dcutr", "ping", "upnp", "websocket"] }
warp = "0.3"  
bytes = "1.5" 

# =========================================================
# 🌐 2. WASM DEPENDENCIES (Mobile Phones & Web Browsers)
# =========================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.50.0", features = ["sync", "macros", "time", "rt"] } 
libp2p = { version = "0.53", default-features = false, features = ["wasm-bindgen", "gossipsub", "kad", "identify", "ping", "macros"] }